sort.basic.lessons.sort.basic.bubble.AlgBubbleSort2.scala.error
AlgBubbleSort2:12: error: ';' expected but integer literal found.
	}  i -= 1;
                ^