sort.basic.lessons.sort.basic.bubble.AlgBubbleSort2.scala.code
def bubbleSort2() {
var nbr=getNombreValeurs();
var i= nbr-1;

	do{
		for(j<-0 to i){
             if(plusPetit(j,j+1)==false)
           	echange(j,j+1);
           
	 
	}  i -= 1;
	
} while (i!=0)
}